Update Final Project (1).html

--- a/Final Project (1).html
+++ b/Final Project (1).html
@@ -11858,7 +11858,8 @@ span.nbgrader-label {
   </div></div>
 
 <div class="cell border-box-sizing text_cell rendered">
-  <div class="prompt input_prompt"></div>
+  <div class="prompt input_prompt">
+</div>
 <div class="panel panel-primary nbgrader_cell"></div>
     <div class="panel-body">
       <div class="text_cell_render border-box-sizing rendered_html">
